version/0.32/_sources/api/solver/_autosummary/settings/reorder.rst.txt
:orphan:

.. _reorder:

reorder
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.reorder
    :show-inheritance:

.. rubric:: Methods

======================================   =====================================================

Method                                                                                 Summary

======================================   =====================================================
:ref:`band_width <band_width>`                                           Print cell bandwidth.

:ref:`reorder_domain <reorder_domain>`       Reorder cells and faces by reverse Cuthill-McKee.

:ref:`reorder_zones <reorder_zones>`                 Reorder zones by partition, type, and id.

======================================   =====================================================

.. rubric:: Included in:

==================   =================

Parent                         Summary

==================   =================
:ref:`mesh <mesh>`       'mesh' child.

==================   =================

